# GAMES101-Overveiw_of_Computer_Graphics

./: .gitignore  GAMES101 Assignment3 作业框架分析.md  Games101作业框架分析1.md  LICENSE  README.MD
Assignment1/code_framework/: CMakeLists.txt  Triangle.cpp  Triangle.hpp  main.cpp  rasterizer.hpp
Assignment2/code_framework/: CMakeLists.txt  main.cpp  rasterizer.cpp
Assignment3/Code/: CMakeCache.txt  CMakeLists.txt  main.cpp  rasterizer.cpp
Assignment4/code/: CMakeCache.txt  CMakeLists.txt  main.cpp
pa0/: eigen_example.cpp  main.cpp
